--- a/title.css
+++ b/title.css
@@ -14,6 +14,10 @@
     background-size: cover;
     position: relative;
 
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 300px;
+
 }
 nav{
     display: flex;
@@ -57,13 +61,14 @@ nav{
     width: 90%;
     color: white;
     position: absolute;
-    top: 400px;
+    top: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     display: block;
     line-height: 21px;
     transition: 0.5s;
+
 }
 .Title img{
     width: 200px;
