--- a/content.css
+++ b/content.css
@@ -13,3 +13,17 @@ body{
     max-height: 100vh;
     height: 1000px;
 }
+.portofolio{
+    min-height: 100vh;
+    width: 100%;
+    color: white;
+    text-align: center;
+    justify-content: space-between;
+    transform: translate(0%, -90%);;
+}
+.portofolio h1{
+    
+    font-weight: 300;
+    font-size: 38px;
+
+}
