--- a/title.css
+++ b/title.css
@@ -3,9 +3,14 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+html {
+    scroll-behavior: smooth;
+  }
 .header{
     min-height: 100vh;
     width: 100%;
+
+    position: fixed;
 
     background-image: url(resource/png/BG.jpg);
     background-color: rgb(0, 0, 0, 0.66);
@@ -18,6 +23,7 @@
 
 }
 .navbar{
+    z-index: 1;
     position:sticky;
     top: 0px;
     background: #161f28;
@@ -40,6 +46,9 @@
     text-align: center;
     padding: 30px 24px;
     transition: 0.5s
+}
+.navbrand a:hover{
+   color: orange;
 }
 .navsupport a{
     color: white;
@@ -176,7 +185,9 @@
     position: relative;
     transition: 0.5s;
 }
-.external-links ul li:hover{
+.external-links img:hover{
+    width: 60px;
+    height: auto;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(-20deg) brightness(150%) contrast(100%);
 }
 
