--- a/title.css
+++ b/title.css
@@ -10,14 +10,12 @@ html {
     min-height: 100vh;
     width: 100%;
 
-    position: fixed;
-
+    position: relative;
     background-image: url(resource/png/BG.jpg);
     background-color: rgb(0, 0, 0, 0.66);
     background-blend-mode: multiply;
     background-position: center;
     background-size: cover;
-    position: relative;
 
     overflow-x: hidden;
 
@@ -183,11 +181,10 @@ html {
     display: inline-block;
     padding: 8px 8px;
     position: relative;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 .external-links img:hover{
-    width: 60px;
-    height: auto;
+    scale: 115%;
     filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(-20deg) brightness(150%) contrast(100%);
 }
 
@@ -224,13 +221,14 @@ html {
         position: relative;
     }
     .navbar a{
-        font-size: calc(18px / 2);
-        line-height: calc(21px / 2);
+        font-size: calc(18px / 1.7);
+        line-height: calc(21px / 1.7);
     }
     .navcenter a{
         font-size: 8px;
+        padding: 3px 6px;
     }
     .navcenter{
-        margin-right: 0px;
+        margin-right: 20px;
     }
 }
