--- a/loader.css
+++ b/loader.css
@@ -1,3 +1,5 @@
+/* The loader was developed by Iddar Olivares (https://codepen.io/iddar/pen/xwXowq) */
+
 .loader-wrapper {
   width: 100%;
   height: 100%;
