--- a/content.css
+++ b/content.css
@@ -4,31 +4,94 @@ body{
     background:#161f28;
 }
 .content{
-    padding: 0px 24px;
-    text-align: justify;
-    font-size: 24px;
+    margin: 20px;
+    padding: 0;
+    height: 2000px;
+    background-color: #161f28;
+    text-align: center;
 }
-.content svg{
-    max-width: 100%;
-    max-height: 100vh;
-    height: 1000px;
-}
-.portofolio{
+#portfolio{
+    margin-top: 50px;
     position: relative;
     color: white;
     text-align: center;
     justify-content: space-between;
     transform: translate(0%, 3%);
 }
-.portofolio p{
+.text-title p{
+    color: white;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 28px;
+    transition: 0.5s;
+}
+.text-title p::after{
+    content: "";
+    background: white;
+    height: 2px;
+    width: 100px;
+    display: block;
+    margin:auto;
+    margin-top: 3px;
+}
+.text-normal p{
+    color: white;
+    font-style: normal;
     font-weight: 300;
     font-size: 18px;
     transition: 0.5s;
-
+}
+.portfolio-container{
+    margin: 3%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 300px 300px;
+    grid-gap: 10px;
+}
+.portfolio-gallery-item{
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
+.portfolio-gallery-item .portfolio-images{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+.portfolio-gallery-item .portfolio-images img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.portfolio-gallery-item:hover .portfolio-images img{
+    transform: scale(1.1);
+}
+#commission .text-title p:after{
+    width: 150px;
+}
+
+#commission{
+    margin-top: 100px;
+}
+#commission .text-normal{
+    margin-top: 250px;
+}
+#linux-tan{
+    margin-top: 250px;
+
+}
+#linux-tan .text-normal{
+    margin-top: 250px;
+}
 @media(max-width: 700px){
-    .portofolio p{
-        font-size: calc(18px / 1.2);
+    #portfolio p{
+        font-size: calc(28px / 1.2);
+    }
+    #portfolio p::after{
+        width: calc(100px / 1.2);
     }
 }
