--- a/loader.css
+++ b/loader.css
@@ -3,7 +3,8 @@
 .loader-wrapper {
   width: 100%;
   height: 100%;
-  position: fixed;
+  z-index: 2;
+  position:fixed;
   top: 0;
   left: 0;
   background-color: #161f28;
