--- a/loader.css
+++ b/loader.css
@@ -1,5 +1,22 @@
 /* The loader was developed by Iddar Olivares (https://codepen.io/iddar/pen/xwXowq) */
+.loading-text{
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position:fixed;
+  top: 0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 
+  color: white;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  margin-top: 80px;
+  margin-left: 10px;
+}
 .loader-wrapper {
   width: 100%;
   height: 100%;
