--- a/css/title.css
+++ b/css/title.css
@@ -14,7 +14,7 @@ html {
     width: 100%;
 
     position: relative;
-    background-image: url(resource/png/BG.jpg);
+    background-image: url(../resource/png/BG.jpg);
     background-color: rgb(0, 0, 0, 0.66);
     background-blend-mode: multiply;
     background-position: center;
@@ -89,7 +89,6 @@ html {
     color: black;
     border-radius: 75px;
 }
-
 
 .Title{
     width: 90%;
@@ -273,6 +272,11 @@ html {
         margin-left: 20px;
     }
     .navbrand a{
+        font-size: 0px;
+    }
+}
+@media(max-width: 380px){
+    #navlinux{
         font-size: 0px;
     }
 }
