--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -33,7 +33,7 @@ body.lb-disable-scrolling {
   border-radius: 3px;
 
   /* Image border */
-  border: 4px solid white;
+  border: 4px solid #161f28;
 }
 
 .lightbox a img {
@@ -50,7 +50,7 @@ body.lb-disable-scrolling {
 
   /* Background color behind image.
      This is visible during transitions. */
-  background-color: white;
+  background-color: #161f28;
 }
 
 .lb-outerContainer:after {
